# homotopy-nn

./: .gitignore  1LAB_SHEAF_REASONING_GUIDE.md  ACCOMPLISHMENTS.md  ACYCLICITY_ANALYSIS.md  ACYCLICITY_SESSION_PROGRESS.md  AGENT6_COMPOSITION_TRANSPORT_REPORT.md  AGENT6_FINAL_REPORT.md  AGENT_SESSION_REPORT.md  ARC-AGI-2-STRATEGY.md  ARCHITECTURE_HOLES_FIXED.md  ARCHITECTURE_HOLES_SUMMARY.md  ARCHITECTURE_POSTULATES.md  ATTENTION_3CAT_JAX_SUMMARY.md  AUDIT.md  BACKPROPAGATION_POSTULATES_ANALYSIS.md  BLOG_POST_SUMMARY.md  BRAIDS_PROGRESS_REPORT.md  CATASTROPHE_COMPLETION_REPORT.md  CATASTROPHE_VERIFICATION_REPORT.md  CATS_MANIFOLD_COMPLETION_REPORT.md  CHAINS-AND-DYNAMICS.md  CHAIN_GRAPH_ORIENTED_GRAPH_MISMATCH.md  CLASSIFIER_AGENT_REPORT.md  CLASSIFIER_HOLES_FIXED.md  CLASSIFYING_AGENT_REPORT.md  CLAUDE.md  COMBINATORIAL_SPECIES_SUMMARY.md  COMMIT_MESSAGE.txt  COMPILER.md  COMPLETION_SUMMARY.md  DECISION_HANDLE_HOLE.md  DEMO.md  DERIVATOR_STATUS.md  DIRECTION_MISMATCH_FINAL_ANALYSIS.md  DSL-PROOF-STATE.md  DSL-SUCCESS.md  EINSUM_DEEP_EMBEDDING_ARCHITECTURE.md  EINSUM_PIPELINE_STATUS.md  EINSUM_POSTULATE_ELIMINATION_SUCCESS.md  EINSUM_TOSTRING_COMPLETE.md  (+88 more)
docs/diagrams/: Makefile  NetworkDiagrams.hs  README.md  network-diagrams.cabal
hask/: README.md  einsum-bridge.cabal
hask/app/: Main.hs
hask/src/Attention/: Bridge.hs
hask/src/Einsum/: PythonBridge.hs
hask/src/MLP/: Compiler.hs
neural_compiler/topos/: ALGEBRAIC_GEOMETRY_RESULTS.md  ARC_TRAINING_RESULTS.md  CHANGELOG_CNN_INTEGRATION.md  CNN_SHEAF_INTEGRATION.md  COMPLETE_FAST_LEARNING_FRAMEWORK.md  DIFFERENTIABLE_TOPOS_COMPLETE.md  EQUIVARIANT_HOMOTOPY_INTEGRATION_COMPLETE.md  EXPERIMENT_SUMMARY.txt  FAST_ROBUST_LEARNING.md  FINAL_STATUS_AND_NEXT_STEPS.md  GEOMETRIC_MORPHISM_SUCCESS.md  GPU_ACCELERATION_ENABLED.md  GROS_TOPOS_AGI_FRAMEWORK.md  HOMOTOPY_QUICKSTART.md  HONEST_IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  INTEGRATION_SUMMARY.md  NEURAL_SYMBOLIC_COMPLETE.md  PHASE1_CRITICAL_FIXES_COMPLETE.md  PHASE2A_COMPLETE.md  PHASE2B_COMPLETE.md  PHASE2C_COMPLETE.md  PREDICTION_PIPELINE_FIXED.md  README.md  README_META_LEARNING.md  README_TOPOS_EXPERIMENTS.md  READY_TO_TRAIN.md  SECTIONS_2.2_2.3_2.4_COMPLETE.md  SIZE_POLYMORPHISM_STATUS.md  TOPOS_ARC_SUMMARY.md  TOPOS_CATEGORICAL_IMPLEMENTATION.md  TOPOS_EXPERIMENT_REPORT.md  TOPOS_LOSS_COMPUTATION.md  TOPOS_TESTING.md  TRAINING_ANALYSIS.md  TRAINING_STATUS_REPORT.md  TRAIN_README.md  TRM_IMPLEMENTATION_COMPLETE.md  VARIABLE_SIZE_FIX_STATUS.md  VECTORIZATION_COMPLETE.md  (+107 more)
neural_compiler/topos/.hypothesis/constants/: 2507674971350369  5392d7b17752e4cd  655a1fdc8d606304  6b002dcf4607e6fb  6bb0d7508b617dbb  6fb0fbf5464fbf6c  77ef8c932adf907e  804074dbe120f158  870c8b1ce3aedba2  cb28c8f6d3e900ae  d121e4e9e1465fb6  e15f811cf07972ef  f725a11505131577  f735d46ddfff20f8
neural_compiler/topos/arc_results/run_20251020_015935/: config.json
neural_compiler/topos/arc_results/run_20251020_020328/: config.json
neural_compiler/topos/arc_results/run_20251020_043413/: config.json
neural_compiler/topos/arc_results/run_20251021_004505/: config.json
neural_compiler/topos/runs/20251022_213558/: events.out.tfevents.1761150960.Faezs-MacBook-Pro.local.7279.0  events.out.tfevents.1761150961.Faezs-MacBook-Pro.local.7279.1  events.out.tfevents.1761150963.Faezs-MacBook-Pro.local.7279.3  events.out.tfevents.1761150965.Faezs-MacBook-Pro.local.7279.5  events.out.tfevents.1761150967.Faezs-MacBook-Pro.local.7279.7  events.out.tfevents.1761150969.Faezs-MacBook-Pro.local.7279.9  events.out.tfevents.1761150971.Faezs-MacBook-Pro.local.7279.11  events.out.tfevents.1761150973.Faezs-MacBook-Pro.local.7279.13  events.out.tfevents.1761150976.Faezs-MacBook-Pro.local.7279.15  events.out.tfevents.1761150978.Faezs-MacBook-Pro.local.7279.17  events.out.tfevents.1761150980.Faezs-MacBook-Pro.local.7279.19  events.out.tfevents.1761150982.Faezs-MacBook-Pro.local.7279.21  events.out.tfevents.1761150984.Faezs-MacBook-Pro.local.7279.23  (+388 more)
neural_compiler/topos/trained_models/: config.json
tools/: extract-json.py  onnx-bridge.cabal  onnx_bridge.py
tools/haskell/ONNX/: Types.hs
(+2304 files in other folders)
