cabal-version: 3.0
name: onnx-bridge
version: 0.1.0.0
synopsis: Haskell bridge for Agda DirectedGraph to ONNX protobuf
description: Serialize Agda ONNX IR to binary ONNX protobuf format
license: MIT
author: Homotopy Neural Networks
build-type: Simple

executable onnx-bridge
  main-is: Main.hs
  other-modules:
    ONNX.Types
    ONNX.Serialize
  build-depends:
    base >= 4.16,
    text >= 2.0,
    bytestring >= 0.11,
    proto-lens >= 0.7,
    proto-lens-runtime >= 0.7,
    onnx >= 0.1,
    aeson >= 2.1,
    filepath >= 1.4,
    directory >= 1.3
  hs-source-dirs: haskell
  default-language: Haskell2010
  ghc-options: -Wall -O2
