cabal-version:      2.4
name:               network-diagrams
version:            0.1.0.0
synopsis:           Generate diagrams for neural network architectures
description:        Haskell diagrams for the homotopy-nn blog post
license:            MIT
author:             Faez Shakil
maintainer:         faez@example.com
category:           Graphics
build-type:         Simple

executable network-diagrams
    main-is:          NetworkDiagrams.hs
    build-depends:    base ^>=4.14.3.0,
                      diagrams-lib ^>=1.4,
                      diagrams-svg ^>=1.4,
                      diagrams-contrib ^>=1.4,
                      colour ^>=2.3.5,
                      text ^>=1.2.4.0
    hs-source-dirs:   .
    default-language: Haskell2010
    ghc-options:      -Wall -threaded
